--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -89,6 +89,7 @@ Purtroppo a cause di forza maggiore dovute allo stato di salute di uno dei membr
             \item Sviluppo del componente PHP per astrarre la sosituzione nei template HTML;
             \item Sviluppo degli script PHP che si occupano dell'inserimento e rimozione dei dati utilizzando l'interfaccia ORM;
             \item Sviluppo di script JavaScript per l'ordinamento delle aule tramite API di geolocalizzazione;
+            \item Ideazione dei contenuti per l'emotional desing;
             \item Stesura della relazione;
         \end{itemize}
     \item \textbf{Alessandro Massarenti:}
@@ -104,6 +105,7 @@ Purtroppo a cause di forza maggiore dovute allo stato di salute di uno dei membr
     \item \textbf{Elia Pasquali:}
         \begin{itemize}
             \item Progettazione del sito web;
+            \item Sviluppo del foglio di stile CSS per la stampa; 
             \item Sviluppo del JavaScript dedicato alla comparsa/scomparsa di elementi;
             \item Inserimento dei componenti HTML con attributi aria dedicati all'accessibilità;
             \item Realizzazione del codice JavaScript dedicato alla validazione dei form in maniera accessibile;
